# routes/taskRoutes.js
@@ -5,11 +5,15 @@ const {
   createTask,
   updateTask,
   deleteTask,
-} = require("../controllers/userController");
+} = require("../controllers/taskController");
+const validateRole = require("../middlewares/validateRole");
+const validateToken = require("../middlewares/validateToken");
 const router = express.Router();
 
-router.post("/tasks", validateToken(), validateRole(), createTask);
-router.get("/tasks/:id", validateToken(), validateRole(), getTasks);
-router.put("/tasks/:id", validateToken(), validateRole(), updateTask);
-router.get("/tasks", validateToken(), validateRole(), getTasksCreatedByAdmin);
-router.delete("/tasks/:id", validateToken(), validateRole(), deleteTask);
+router.post("/tasks", validateToken, validateRole, createTask);
+router.get("/tasks/:id", validateToken, validateRole, getTasks);
+router.put("/tasks/:id", validateToken, validateRole, updateTask);
+router.get("/tasks", validateToken, validateRole, getTasksCreatedByAdmin);
+router.delete("/tasks/:id", validateToken, validateRole, deleteTask);
+
+module.exports = router;
